test/Debug/Errors/UnclosedParenthesis.k.proof
 - (warning) (UnclosedParenthesis.k:3) ignored tokens: {... }
 - (error) (UnclosedParenthesis.k:3) if statement needs syntax pattern: $Block
Q.E.D.
